fix layout problems

--- a/src/app/Auth/login/login.component.scss
+++ b/src/app/Auth/login/login.component.scss
@@ -1,8 +1,9 @@
 .SignupContainer{
-  width: 100%;
-  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 75px auto;
   background: black;
-  margin: 75px 0;
 }
 
 .SignupWrapper{
