--- a/src/app/Auth/sign-up/sign-up.component.scss
+++ b/src/app/Auth/sign-up/sign-up.component.scss
@@ -1,8 +1,5 @@
 .SignupContainer{
-  width: 100%;
-  height: 100%;
   background: black;
-  margin: -25px 0 ;
 }
 
 .SignupWrapper{
